--- a/hireme/index.html
+++ b/hireme/index.html
@@ -368,6 +368,55 @@
         color: var(--bg-deep);
       }
 
+      .nav-center {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      .download-cv-btn {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        background: linear-gradient(135deg, var(--accent-secondary), var(--accent-senary));
+        border: none;
+        color: #ffffff;
+        padding: 0.6rem 1.2rem;
+        border-radius: var(--radius-button);
+        font-family: var(--font-mono);
+        font-size: 0.85rem;
+        font-weight: 600;
+        text-decoration: none;
+        cursor: pointer;
+        transition: all var(--transition-speed) var(--transition-timing);
+        box-shadow: 0 4px 15px rgba(247, 37, 133, 0.3);
+      }
+
+      [data-theme="light"] .download-cv-btn {
+        background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary));
+        box-shadow: 0 4px 15px rgba(193, 95, 60, 0.25);
+      }
+
+      .download-cv-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 6px 20px rgba(247, 37, 133, 0.4);
+      }
+
+      [data-theme="light"] .download-cv-btn:hover {
+        box-shadow: 0 6px 20px rgba(193, 95, 60, 0.35);
+      }
+
+      .download-cv-btn svg {
+        width: 16px;
+        height: 16px;
+      }
+
+      @media (max-width: 768px) {
+        .nav-center {
+          display: none;
+        }
+      }
+
       /* Hero Section */
       .hero {
         min-height: 100vh;
@@ -1089,6 +1138,12 @@
         </svg>
         REJ.DEV
       </a>
+      <div class="nav-center">
+        <a href="Rej_Averion_Resume.pdf" download class="download-cv-btn">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
+          <span>Download CV as PDF</span>
+        </a>
+      </div>
       <div class="nav-right">
         <a href="https://github.com/raverion" target="_blank" class="github-btn">
           <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
@@ -1106,7 +1161,7 @@
     <section class="hero">
       <div class="hero-content">
         <div class="hero-text">
-          <span class="hero-label">Resume / Profile</span>
+          <span class="hero-label">Work Profile</span>
           <h1 class="hero-name">Rej Averion</h1>
           <h2 class="hero-title">Test & Verification Engineer</h2>
           <p class="hero-description">Testing anything from silicon to software, I bridge the gap between quality and profitability. With 7+ years in automotive semiconductors and a fresh perspective in Medical OEM, I design hardware, write code, debug test setups, and leverage AI in my workflow. A hands-on, forward-looking practitioner and a versatile technical generalist.</p>
