--- a/hireme/index.html
+++ b/hireme/index.html
@@ -1164,7 +1164,7 @@
           <span class="hero-label">Work Profile</span>
           <h1 class="hero-name">Rej Averion</h1>
           <h2 class="hero-title">Test & Verification Engineer</h2>
-          <p class="hero-description">Testing anything from silicon to software, I bridge the gap between quality and profitability. With 7+ years in automotive semiconductors and a fresh perspective in Medical OEM, I design hardware, write code, debug test setups, and leverage AI in my workflow. A hands-on, forward-looking practitioner and a versatile technical generalist.</p>
+          <p class="hero-description">Testing anything from silicon to software, I bridge the gap between quality and profitability. With 7+ years in high-volume semiconductor manufacturing and a fresh perspective in embedded systems R&D, I design and debug test setups in the lab, on the bench, or in production line.</p>
         </div>
         <div class="hero-illustration">
           <svg class="chip-svg" viewBox="0 0 400 400" fill="none">
