Added new project link

--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,13 @@
   </head>
 
   <body>
+    <a href="textcryptor.html">TextCryptor (encrypt/decrypt ASCII)</a>
+    <a href="https://calibration-analyzer.onrender.com/">Calibration Analyzer</a>
     <a href="/stdf_visualizer/stdf_visualizer.html"
       >STDF Visualizer (work-in-progress)</a
     >
-    <a href="textcryptor.html">TextCryptor (encrypt/decrypt ASCII)</a>
     <a href="/docugen/docugen.html">Document Generator</a>
     <a href="/react-app/projects.html">To-do List App</a>
+    
   </body>
 </html>
