--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
         <form
           class="contact-form"
           id="contact-form"
-          action="https://formspree.io/f/YOUR_FORM_ID"
+          action="https://formspree.io/f/zznypan"
           method="POST"
         >
           <div class="form-row">
@@ -821,11 +821,11 @@
               Send Message
             </button>
           </div>
-          <p class="form-note">
+          <!-- <p class="form-note">
             Powered by
             <a href="https://formspree.io" target="_blank">Formspree</a>. No
             backend needed for GitHub Pages.
-          </p>
+          </p> -->
         </form>
       </section>
     </main>
