--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
         <form
           class="contact-form"
           id="contact-form"
-          action="https://formspree.io/f/zznypan"
+          action="https://formspree.io/f/xzznypan"
           method="POST"
         >
           <div class="form-row">
