--- a/index.html
+++ b/index.html
@@ -527,6 +527,7 @@
       <div class="logo">rej.averion</div>
       <ul class="nav-links">
         <li><a href="#projects">Projects</a></li>
+        <li><a href="https://rejaverion.dev/textcryptor.html">TextCryptor</a></li>
         <li><a href="#contact">Contact</a></li>
         <li>
           <a href="https://github.com/rejaverion" target="_blank">GitHub</a>
