--- a/index.html
+++ b/index.html
@@ -244,6 +244,12 @@
         gap: 1rem;
       }
 
+      .inline-link {
+        color: var(--link-color);
+        text-decoration: underline;
+        cursor: pointer;
+      }
+
       .project-card:hover {
         transform: translateY(-4px);
         box-shadow: 0 12px 40px rgba(0, 0, 0, 0.08);
@@ -627,7 +633,7 @@
         </div>
         <div class="projects-grid">
           <!-- Featured: Resume -->
-          <a href="hireme/index.html" class="project-card featured">
+          <a href="hireme/index.html" class="project-card featured" target="_blank">
             <div class="project-icon">📄</div>
             <h3>Webpage Resume</h3>
             <p>
@@ -641,7 +647,7 @@
           </a>
 
           <!-- TextCryptor -->
-          <a href="textcryptor.html" class="project-card">
+          <a href="textcryptor.html" class="project-card" target="_blank">
             <div class="project-icon">🔐</div>
             <h3>TextCryptor</h3>
             <p>
@@ -654,7 +660,7 @@
           </a>
 
           <!-- Document Generator -->
-          <a href="docugen/docugen.html" class="project-card">
+          <a href="docugen/docugen.html" class="project-card" target="_blank">
             <div class="project-icon">📝</div>
             <h3>Document Generator</h3>
             <p>
@@ -668,7 +674,7 @@
           </a>
 
           <!-- To-Do List App -->
-          <a href="react-app/projects.html" class="project-card">
+          <a href="react-app/projects.html" class="project-card" target="_blank">
             <div class="project-icon">✅</div>
             <h3>To-Do List App</h3>
             <p>
@@ -685,7 +691,7 @@
           <a
             href="#"
             class="project-card"
-            onclick="alert('Coming soon!'); return false;"
+            onclick="alert('Hey, I said I signed an NDA!'); return false;"
           >
             <div class="project-icon">🔧</div>
             <h3>ATE Test Program Semantic Mapping</h3>
@@ -693,23 +699,22 @@
               I signed an NDA.
             </p>
             <div class="project-tags">
-              <span class="tag">Python</span>
-              <span class="tag">ML</span>
-              <span class="tag">Planned</span>
+              <span class="tag">LLM</span>
+              <span class="tag">Commercial Tool</span>
             </div>
           </a>
 
           <!-- Placeholder: Future Project 2 -->
           <a
-            href="#"
+            href="https://calibration-analyzer.onrender.com/"
             class="project-card"
-            onclick="alert('Coming soon!'); return false;"
+            target="_blank"
           >
             <div class="project-icon">⚡</div>
             <h3>Calibration Analyzer</h3>
             <p>
               Generates visual reports from calibration measurement data, identifying outliers, drift and anomalies. Without giving you aneurism.
-              Lives rent-free in Render with very limited bandwidth until I can afford a proper web service. 
+              Lives rent-free in <span class="inline-link">Render</span>, with very limited bandwidth until I can afford a proper web service. 
             </p>
             <div class="project-tags">
               <span class="tag">Python</span>
@@ -719,7 +724,12 @@
           </a>
 
           <!-- STDF Visualizer -->
-          <a href="stdf_visualizer/stdf_visualizer.html" class="project-card">
+          <!-- <a href="stdf_visualizer/stdf_visualizer.html" class="project-card"> -->
+          <a
+            href="#"
+            class="project-card"
+            onclick="alert('Coming sometime in the future or maybe not!'); return false;"
+          >
             <div class="project-icon">📊</div>
             <h3>STDF Visualizer</h3>
             <p>
