--- a/index.html
+++ b/index.html
@@ -689,7 +689,11 @@
           <div class="hero-portrait">
             <div class="portrait-container">
               <!-- Replace 'portrait.svg' with your actual image file (e.g., portrait.jpg) -->
-              <img src="portrait.jpg" alt="Rej Averion" class="portrait-img" />
+              <img
+                src="./portrait.JPG"
+                alt="Rej Averion"
+                class="portrait-img"
+              />
             </div>
           </div>
         </div>
