--- a/index.html
+++ b/index.html
@@ -731,9 +731,8 @@
             <div class="project-icon">📄</div>
             <h3>Webpage Resume</h3>
             <p>
-              My professional experience, skills, and career journey—presented
-              in a way that won't put you to sleep. ATS-friendly PDF available
-              for the robots.
+              My professional skills and experience presented in a way that
+              won't put you to sleep. ATS-friendly PDF available for the robots.
             </p>
             <div class="project-tags">
               <span class="tag">HTML/CSS/JS</span>
@@ -754,56 +753,6 @@
             </div>
           </a>
 
-          <!-- Document Generator -->
-          <a href="docugen/docugen.html" class="project-card" target="_blank">
-            <div class="project-icon">📝</div>
-            <h3>Document Generator</h3>
-            <p>
-              Documents go BRRRR. Template-based document generation for
-              logistical, financial, and administrative files. Developed for my
-              previous role in Dubai, thanks to this I did not have to bother
-              with cumbersome DOC or EXCEL templates.
-            </p>
-            <div class="project-tags">
-              <span class="tag">JavaScript</span>
-              <!-- <span class="tag">Templates</span> -->
-            </div>
-          </a>
-
-          <!-- To-Do List App -->
-          <a
-            href="react-app/projects.html"
-            class="project-card"
-            target="_blank"
-          >
-            <div class="project-icon">✅</div>
-            <h3>To-Do List App</h3>
-            <p>
-              The React equivalent of Hello World. Yes, I know there are a
-              million of these. This one is mine.
-            </p>
-            <div class="project-tags">
-              <span class="tag">React</span>
-              <span class="tag">JavaScript</span>
-            </div>
-          </a>
-
-          <!-- Placeholder: Future Project -->
-          <a
-            href="#"
-            class="project-card"
-            onclick="alert('Hey, I said I signed an NDA!'); return false;"
-          >
-            <div class="project-icon">🔧</div>
-            <h3>ATE Test Program Semantic Mapping</h3>
-            <p>I signed an NDA.</p>
-            <div class="project-tags">
-              <span class="tag">LLM</span>
-              <span class="tag">Commercial Tool</span>
-            </div>
-          </a>
-
-          <!-- Placeholder: Future Project 2 -->
           <a
             href="https://calibration-analyzer.onrender.com/"
             class="project-card"
@@ -825,6 +774,38 @@
             </div>
           </a>
 
+          <!-- To-Do List App -->
+          <a
+            href="react-app/projects.html"
+            class="project-card"
+            target="_blank"
+          >
+            <div class="project-icon">✅</div>
+            <h3>To-Do List App</h3>
+            <p>
+              The React equivalent of Hello World. Yes, I know there are a
+              million of these. This one is mine.
+            </p>
+            <div class="project-tags">
+              <span class="tag">React</span>
+              <span class="tag">JavaScript</span>
+            </div>
+          </a>
+
+          <a
+            href="#"
+            class="project-card"
+            onclick="alert('Hey, I said I signed an NDA!'); return false;"
+          >
+            <div class="project-icon">🔧</div>
+            <h3>ATE Test Program Semantic Mapping</h3>
+            <p>I signed an NDA.</p>
+            <div class="project-tags">
+              <span class="tag">LLM</span>
+              <span class="tag">Commercial Tool</span>
+            </div>
+          </a>
+
           <!-- STDF Visualizer -->
           <!-- <a href="stdf_visualizer/stdf_visualizer.html" class="project-card"> -->
           <a
@@ -843,6 +824,22 @@
               <span class="tag">Python</span>
               <span class="tag">STDF</span>
               <span class="tag">Planned</span>
+            </div>
+          </a>
+
+          <!-- Document Generator -->
+          <a href="docugen/docugen.html" class="project-card" target="_blank">
+            <div class="project-icon">📝</div>
+            <h3>Document Generator</h3>
+            <p>
+              Documents go BRRRR. Template-based document generation for
+              logistical, financial, and administrative files. Developed for my
+              previous role in Dubai, thanks to this I did not have to bother
+              with cumbersome DOC or EXCEL templates.
+            </p>
+            <div class="project-tags">
+              <span class="tag">JavaScript</span>
+              <!-- <span class="tag">Templates</span> -->
             </div>
           </a>
         </div>
