--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link type="image/png" sizes="16x16" rel="icon" href="favicon1.png" />
+    <link type="image/png" sizes="16x16" rel="icon" href="media/favicon1.png" />
     <style>
       * {
         margin: 0;
@@ -688,9 +688,8 @@
           </div>
           <div class="hero-portrait">
             <div class="portrait-container">
-              <!-- Replace 'portrait.svg' with your actual image file (e.g., portrait.jpg) -->
               <img
-                src="./portrait.JPG"
+                src="media/portrait.JPG"
                 alt="Rej Averion"
                 class="portrait-img"
               />
